{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 4,
  "lineage": "b8e6a00d-f01b-cdaf-b1c2-b113301cbf9a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tfer--default-allow-icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-23T09:00:26.203-07:00",
            "deny": [],
            "description": "Allow ICMP from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-icmp",
            "name": "default-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/work1111/global/networks/default",
            "priority": 65534,
            "project": "work1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/work1111/global/firewalls/default-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tfer--default-allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-23T09:00:26.114-07:00",
            "deny": [],
            "description": "Allow internal traffic on the default network",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-internal",
            "name": "default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/work1111/global/networks/default",
            "priority": 65534,
            "project": "work1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/work1111/global/firewalls/default-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tfer--default-allow-rdp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-23T09:00:26.174-07:00",
            "deny": [],
            "description": "Allow RDP from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-rdp",
            "name": "default-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/work1111/global/networks/default",
            "priority": 65534,
            "project": "work1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/work1111/global/firewalls/default-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tfer--default-allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-23T09:00:26.142-07:00",
            "deny": [],
            "description": "Allow SSH from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/work1111/global/networks/default",
            "priority": 65534,
            "project": "work1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/work1111/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tfer--ping-allow",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-11-04T05:25:35.543-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ping-allow",
            "name": "ping-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/work1111/global/networks/work-gcp",
            "priority": 1000,
            "project": "work1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/work1111/global/firewalls/ping-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "data.terraform_remote_state.networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tfer--ssh-allow",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-04T05:25:35.242-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ssh-allow",
            "name": "ssh-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/work1111/global/networks/work-gcp",
            "priority": 1000,
            "project": "work1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/work1111/global/firewalls/ssh-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "data.terraform_remote_state.networks"
          ]
        }
      ]
    }
  ]
}